// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ProfilePage 1`] = `
<div
  className="container grid grid--profile"
>
  <div
    className="grid--profile__img"
  />
  <div
    className="grid--profile__name"
  />
  <div
    className="grid--profile__specs"
  >
    <div />
    <div />
  </div>
  <div
    className="grid--profile__specs"
  >
    <div />
    <div />
  </div>
  <div
    className="grid--profile__specs"
  >
    <div />
    <div>
       lbs
    </div>
  </div>
  <div
    className="grid--profile__specs"
  >
    <div>
      Deity: 
    </div>
    <div />
  </div>
  <h4
    className="grid--profile__features-key"
  >
    Languages
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    Feats
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    Special Abilities
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    School
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    Prohibited Schools
  </h4>
  <div
    className="grid--profile__features-value"
  />
</div>
`;

exports[`should render ProfilePage with profile data 1`] = `
<div
  className="container grid grid--profile"
>
  <div
    className="grid--profile__img"
  />
  <div
    className="grid--profile__name"
  >
    Istvyll Bannianea
  </div>
  <div
    className="grid--profile__specs"
  >
    <div />
    <div />
  </div>
  <div
    className="grid--profile__specs"
  >
    <div />
    <div />
  </div>
  <div
    className="grid--profile__specs"
  >
    <div>
      Lawful Evil
    </div>
    <div>
       lbs
    </div>
  </div>
  <div
    className="grid--profile__specs"
  >
    <div>
      Deity: 
    </div>
    <div />
  </div>
  <h4
    className="grid--profile__features-key"
  >
    Languages
  </h4>
  <div
    className="grid--profile__features-value"
  >
    Common, Elven, Draconic, Orc, Sylvan
  </div>
  <h4
    className="grid--profile__features-key"
  >
    Feats
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    Special Abilities
  </h4>
  <div
    className="grid--profile__features-value"
  />
  <h4
    className="grid--profile__features-key"
  >
    School
  </h4>
  <div
    className="grid--profile__features-value"
  >
    Transmutation
  </div>
  <h4
    className="grid--profile__features-key"
  >
    Prohibited Schools
  </h4>
  <div
    className="grid--profile__features-value"
  >
    Illusion, Necromancy
  </div>
</div>
`;
